
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline size_t osafeloader_min(size_t x, size_t y) {
 return x < y ? x : y;
}
